Modified swagger docs
